monitoring/alert-manager-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert-manager-tls-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd, default-vpn-ipwhitelist@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: alert-manager.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-kube-prom-alertmanager
                port:
                  number: 9093
  tls:
    - secretName: alert-manager-tls
      hosts:
        - alert-manager.${DOMAIN}
