monitoring/prometheus-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-tls-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd, default-vpn-ipwhitelist@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-kube-prom-prometheus
                port:
                  number: 9090
  tls:
    - secretName: prometheus-tls
      hosts:
        - prometheus.${DOMAIN}
